parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    WITH
    DEFINITION
    RECORD
    DOTDOT
    ASH
    COMMENT
    HALT
    IN
    TYPE

Grammar

Rule 0     S' -> module
Rule 1     module -> MODULE ID ; importList declarationList statementBlock END ID .
Rule 2     module -> MODULE ID ; importList declarationList statementBlock END ID
Rule 3     importList -> IMPORT importedModulesList ;
Rule 4     importList -> <empty>
Rule 5     importedModulesList -> importedModules , importedModulesList
Rule 6     importedModulesList -> importedModules
Rule 7     importedModules -> ID ASSIGN ID
Rule 8     importedModules -> ID
Rule 9     declarationList -> identifierDeclarationList procedureDeclarationList
Rule 10    identifierDeclarationList -> CONST constantDeclarationList identifierDeclarationList
Rule 11    identifierDeclarationList -> VAR variableDeclarationList identifierDeclarationList
Rule 12    identifierDeclarationList -> <empty>
Rule 13    constantDeclarationList -> ID = expression ; constantDeclarationList
Rule 14    constantDeclarationList -> <empty>
Rule 15    variableDeclarationList -> identifierList : type ; clearVariables variableDeclarationList
Rule 16    variableDeclarationList -> <empty>
Rule 17    clearVariables -> <empty>
Rule 18    identifierList -> ID
Rule 19    identifierList -> ID , identifierList
Rule 20    procedureDeclarationList -> procedureDeclaration ; procedureDeclarationList
Rule 21    procedureDeclarationList -> forwardDeclaration ; procedureDeclarationList
Rule 22    procedureDeclarationList -> <empty>
Rule 23    procedureDeclaration -> PROCEDURE receiver ID createTable optionalFormalParameters ; declarationList insertEntry statementBlock END ID popTable
Rule 24    insertEntry -> <empty>
Rule 25    popTable -> <empty>
Rule 26    createTable -> <empty>
Rule 27    receiver -> ( optionalVAR ID : ID )
Rule 28    receiver -> <empty>
Rule 29    optionalVAR -> VAR
Rule 30    optionalVAR -> <empty>
Rule 31    optionalFormalParameters -> ( optionalFormalParameterList ) : qualident
Rule 32    optionalFormalParameters -> ( optionalFormalParameterList )
Rule 33    optionalFormalParameters -> <empty>
Rule 34    optionalFormalParameterList -> formalParameterList
Rule 35    optionalFormalParameterList -> <empty>
Rule 36    formalParameterList -> formalParameter ; formalParameterList
Rule 37    formalParameterList -> formalParameter
Rule 38    formalParameter -> optionalVAR identifierList : type
Rule 39    forwardDeclaration -> PROCEDURE ^ receiver ID createTable optionalFormalParameters popTable2
Rule 40    popTable2 -> <empty>
Rule 41    statementBlock -> BEGIN beginquad statementList boolMarker
Rule 42    statementBlock -> <empty>
Rule 43    beginquad -> <empty>
Rule 44    statementList -> statementList boolMarker statement ;
Rule 45    statementList -> statement ;
Rule 46    statementList -> <empty>
Rule 47    statement -> IF expression THEN boolMarker statementList nMarker boolMarker elsifList optionalElse END
Rule 48    elsifList -> ELSIF expression THEN boolMarker statementList nMarker boolMarker elsifList
Rule 49    elsifList -> <empty>
Rule 50    optionalElse -> ELSE statementList
Rule 51    optionalElse -> <empty>
Rule 52    statement -> CASE expression OF caseList optionalElse END
Rule 53    caseList -> case | caseList
Rule 54    caseList -> case
Rule 55    case -> expression : statementList
Rule 56    case -> <empty>
Rule 57    statement -> WHILE boolMarker expression DO boolMarker statementList END
Rule 58    statement -> REPEAT boolMarker statementList UNTIL boolMarker expression
Rule 59    statement -> FOR ID ASSIGN expression forAssign TO expression toValue optionalBY DO boolMarker statementList boolMarker END
Rule 60    forAssign -> <empty>
Rule 61    toValue -> <empty>
Rule 62    optionalBY -> BY expression
Rule 63    optionalBY -> <empty>
Rule 64    statement -> LOOP boolMarker statementList END
Rule 65    statement -> EXIT
Rule 66    statement -> READINT ( designator )
Rule 67    statement -> READREAL ( designator )
Rule 68    statement -> RETURN
Rule 69    statement -> RETURN expression
Rule 70    statement -> designator
Rule 71    statement -> designator checkConstant ASSIGN expression
Rule 72    checkConstant -> <empty>
Rule 73    statement -> DEC ( designator checkConstant )
Rule 74    statement -> DEC ( designator checkConstant , expression )
Rule 75    statement -> INC ( designator checkConstant )
Rule 76    statement -> INC ( designator checkConstant , expression )
Rule 77    builtIn -> ABS ( expression )
Rule 78    builtIn -> SIZE ( INTEGER )
Rule 79    builtIn -> SIZE ( REAL )
Rule 80    builtIn -> SIZE ( BOOLEAN )
Rule 81    builtIn -> SIZE ( CHAR )
Rule 82    builtIn -> MIN ( INTEGER )
Rule 83    builtIn -> MIN ( REAL )
Rule 84    builtIn -> MIN ( BOOLEAN )
Rule 85    builtIn -> MIN ( CHAR )
Rule 86    builtIn -> MAX ( INTEGER )
Rule 87    builtIn -> MAX ( REAL )
Rule 88    builtIn -> MAX ( BOOLEAN )
Rule 89    builtIn -> MAX ( CHAR )
Rule 90    builtIn -> CHR ( expression )
Rule 91    builtIn -> ORD ( expression )
Rule 92    builtIn -> CAP ( expression )
Rule 93    designator -> ID suffix
Rule 94    designator -> builtIn
Rule 95    suffix -> . ID suffix
Rule 96    suffix -> [ optionalExpressionList ] suffix
Rule 97    suffix -> ^ suffix
Rule 98    suffix -> ( optionalExpressionList ) suffix
Rule 99    suffix -> <empty>
Rule 100   optionalExpressionList -> expressionList
Rule 101   optionalExpressionList -> <empty>
Rule 102   qualident -> ID
Rule 103   qualident -> ID . ID
Rule 104   qualident -> INTEGER
Rule 105   qualident -> CHAR
Rule 106   qualident -> REAL
Rule 107   qualident -> BOOLEAN
Rule 108   type -> qualident
Rule 109   type -> ARRAY expression OF type
Rule 110   type -> POINTER TO ARRAY expression OF type
Rule 111   expressionList -> expression , expressionList
Rule 112   expressionList -> expression
Rule 113   expression -> - expression
Rule 114   expression -> + expression
Rule 115   expression -> factor
Rule 116   boolMarker -> <empty>
Rule 117   nMarker -> <empty>
Rule 118   expression -> expression OR boolMarker expression
Rule 119   expression -> expression & boolMarker expression
Rule 120   expression -> expression # expression
Rule 121   expression -> expression = expression
Rule 122   expression -> expression < expression
Rule 123   expression -> expression LESSEQUAL expression
Rule 124   expression -> expression > expression
Rule 125   expression -> expression MOREEQUAL expression
Rule 126   expression -> expression + expression
Rule 127   expression -> expression - expression
Rule 128   expression -> expression * expression
Rule 129   expression -> expression / expression
Rule 130   expression -> expression DIV expression
Rule 131   expression -> expression MOD expression
Rule 132   factor -> NIL
Rule 133   factor -> designator
Rule 134   factor -> INTEGERCONSTANT
Rule 135   factor -> CHARACTERCONSTANT
Rule 136   factor -> REALCONSTANT
Rule 137   factor -> STRINGCONSTANT
Rule 138   factor -> BOOLEANCONSTANT
Rule 139   factor -> ~ factor
Rule 140   factor -> ( expression )

Terminals, with rules where they appear

#                    : 120
&                    : 119
(                    : 27 31 32 66 67 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 98 140
)                    : 27 31 32 66 67 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 98 140
*                    : 128
+                    : 114 126
,                    : 5 19 74 76 111
-                    : 113 127
.                    : 1 95 103
/                    : 129
:                    : 15 27 31 38 55
;                    : 1 2 3 13 15 20 21 23 36 44 45
<                    : 122
=                    : 13 121
>                    : 124
ABS                  : 77
ARRAY                : 109 110
ASH                  : 
ASSIGN               : 7 59 71
BEGIN                : 41
BOOLEAN              : 80 84 88 107
BOOLEANCONSTANT      : 138
BY                   : 62
CAP                  : 92
CASE                 : 52
CHAR                 : 81 85 89 105
CHARACTERCONSTANT    : 135
CHR                  : 90
COMMENT              : 
CONST                : 10
DEC                  : 73 74
DEFINITION           : 
DIV                  : 130
DO                   : 57 59
DOTDOT               : 
ELSE                 : 50
ELSIF                : 48
END                  : 1 2 23 47 52 57 59 64
EXIT                 : 65
FOR                  : 59
HALT                 : 
ID                   : 1 1 2 2 7 7 8 13 18 19 23 23 27 27 39 59 93 95 102 103 103
IF                   : 47
IMPORT               : 3
IN                   : 
INC                  : 75 76
INTEGER              : 78 82 86 104
INTEGERCONSTANT      : 134
LESSEQUAL            : 123
LOOP                 : 64
MAX                  : 86 87 88 89
MIN                  : 82 83 84 85
MOD                  : 131
MODULE               : 1 2
MOREEQUAL            : 125
NIL                  : 132
OF                   : 52 109 110
OR                   : 118
ORD                  : 91
POINTER              : 110
PROCEDURE            : 23 39
READINT              : 66
READREAL             : 67
REAL                 : 79 83 87 106
REALCONSTANT         : 136
RECORD               : 
REPEAT               : 58
RETURN               : 68 69
SIZE                 : 78 79 80 81
STRINGCONSTANT       : 137
THEN                 : 47 48
TO                   : 59 110
TYPE                 : 
UNTIL                : 58
VAR                  : 11 29
WHILE                : 57
WITH                 : 
[                    : 96
]                    : 96
^                    : 39 97
error                : 
|                    : 53
~                    : 139

Nonterminals, with rules where they appear

beginquad            : 41
boolMarker           : 41 44 47 47 48 48 57 57 58 58 59 59 64 118 119
builtIn              : 94
case                 : 53 54
caseList             : 52 53
checkConstant        : 71 73 74 75 76
clearVariables       : 15
constantDeclarationList : 10 13
createTable          : 23 39
declarationList      : 1 2 23
designator           : 66 67 70 71 73 74 75 76 133
elsifList            : 47 48
expression           : 13 47 48 52 55 57 58 59 59 62 69 71 74 76 77 90 91 92 109 110 111 112 113 114 118 118 119 119 120 120 121 121 122 122 123 123 124 124 125 125 126 126 127 127 128 128 129 129 130 130 131 131 140
expressionList       : 100 111
factor               : 115 139
forAssign            : 59
formalParameter      : 36 37
formalParameterList  : 34 36
forwardDeclaration   : 21
identifierDeclarationList : 9 10 11
identifierList       : 15 19 38
importList           : 1 2
importedModules      : 5 6
importedModulesList  : 3 5
insertEntry          : 23
module               : 0
nMarker              : 47 48
optionalBY           : 59
optionalElse         : 47 52
optionalExpressionList : 96 98
optionalFormalParameterList : 31 32
optionalFormalParameters : 23 39
optionalVAR          : 27 38
popTable             : 23
popTable2            : 39
procedureDeclaration : 20
procedureDeclarationList : 9 20 21
qualident            : 31 108
receiver             : 23 39
statement            : 44 45
statementBlock       : 1 2 23
statementList        : 41 44 47 48 50 55 57 58 59 64
suffix               : 93 95 96 97 98
toValue              : 59
type                 : 15 38 109 110
variableDeclarationList : 11 15

Parsing method: LALR

state 0

    (0) S' -> . module
    (1) module -> . MODULE ID ; importList declarationList statementBlock END ID .
    (2) module -> . MODULE ID ; importList declarationList statementBlock END ID

    MODULE          shift and go to state 1

    module                         shift and go to state 2

state 1

    (1) module -> MODULE . ID ; importList declarationList statementBlock END ID .
    (2) module -> MODULE . ID ; importList declarationList statementBlock END ID

    ID              shift and go to state 3


state 2

    (0) S' -> module .



state 3

    (1) module -> MODULE ID . ; importList declarationList statementBlock END ID .
    (2) module -> MODULE ID . ; importList declarationList statementBlock END ID

    ;               shift and go to state 4


state 4

    (1) module -> MODULE ID ; . importList declarationList statementBlock END ID .
    (2) module -> MODULE ID ; . importList declarationList statementBlock END ID
    (3) importList -> . IMPORT importedModulesList ;
    (4) importList -> .

    IMPORT          shift and go to state 6
    CONST           reduce using rule 4 (importList -> .)
    VAR             reduce using rule 4 (importList -> .)
    BEGIN           reduce using rule 4 (importList -> .)
    END             reduce using rule 4 (importList -> .)
    PROCEDURE       reduce using rule 4 (importList -> .)

    importList                     shift and go to state 5

state 5

    (1) module -> MODULE ID ; importList . declarationList statementBlock END ID .
    (2) module -> MODULE ID ; importList . declarationList statementBlock END ID
    (9) declarationList -> . identifierDeclarationList procedureDeclarationList
    (10) identifierDeclarationList -> . CONST constantDeclarationList identifierDeclarationList
    (11) identifierDeclarationList -> . VAR variableDeclarationList identifierDeclarationList
    (12) identifierDeclarationList -> .

    CONST           shift and go to state 10
    VAR             shift and go to state 9
    PROCEDURE       reduce using rule 12 (identifierDeclarationList -> .)
    BEGIN           reduce using rule 12 (identifierDeclarationList -> .)
    END             reduce using rule 12 (identifierDeclarationList -> .)

    declarationList                shift and go to state 7
    identifierDeclarationList      shift and go to state 8

state 6

    (3) importList -> IMPORT . importedModulesList ;
    (5) importedModulesList -> . importedModules , importedModulesList
    (6) importedModulesList -> . importedModules
    (7) importedModules -> . ID ASSIGN ID
    (8) importedModules -> . ID

    ID              shift and go to state 13

    importedModulesList            shift and go to state 11
    importedModules                shift and go to state 12

state 7

    (1) module -> MODULE ID ; importList declarationList . statementBlock END ID .
    (2) module -> MODULE ID ; importList declarationList . statementBlock END ID
    (41) statementBlock -> . BEGIN beginquad statementList boolMarker
    (42) statementBlock -> .

    BEGIN           shift and go to state 15
    END             reduce using rule 42 (statementBlock -> .)

    statementBlock                 shift and go to state 14

state 8

    (9) declarationList -> identifierDeclarationList . procedureDeclarationList
    (20) procedureDeclarationList -> . procedureDeclaration ; procedureDeclarationList
    (21) procedureDeclarationList -> . forwardDeclaration ; procedureDeclarationList
    (22) procedureDeclarationList -> .
    (23) procedureDeclaration -> . PROCEDURE receiver ID createTable optionalFormalParameters ; declarationList insertEntry statementBlock END ID popTable
    (39) forwardDeclaration -> . PROCEDURE ^ receiver ID createTable optionalFormalParameters popTable2

    BEGIN           reduce using rule 22 (procedureDeclarationList -> .)
    END             reduce using rule 22 (procedureDeclarationList -> .)
    PROCEDURE       shift and go to state 19

    forwardDeclaration             shift and go to state 16
    procedureDeclarationList       shift and go to state 17
    procedureDeclaration           shift and go to state 18

state 9

    (11) identifierDeclarationList -> VAR . variableDeclarationList identifierDeclarationList
    (15) variableDeclarationList -> . identifierList : type ; clearVariables variableDeclarationList
    (16) variableDeclarationList -> .
    (18) identifierList -> . ID
    (19) identifierList -> . ID , identifierList

    CONST           reduce using rule 16 (variableDeclarationList -> .)
    VAR             reduce using rule 16 (variableDeclarationList -> .)
    PROCEDURE       reduce using rule 16 (variableDeclarationList -> .)
    BEGIN           reduce using rule 16 (variableDeclarationList -> .)
    END             reduce using rule 16 (variableDeclarationList -> .)
    ID              shift and go to state 22

    variableDeclarationList        shift and go to state 20
    identifierList                 shift and go to state 21

state 10

    (10) identifierDeclarationList -> CONST . constantDeclarationList identifierDeclarationList
    (13) constantDeclarationList -> . ID = expression ; constantDeclarationList
    (14) constantDeclarationList -> .

    ID              shift and go to state 24
    CONST           reduce using rule 14 (constantDeclarationList -> .)
    VAR             reduce using rule 14 (constantDeclarationList -> .)
    PROCEDURE       reduce using rule 14 (constantDeclarationList -> .)
    BEGIN           reduce using rule 14 (constantDeclarationList -> .)
    END             reduce using rule 14 (constantDeclarationList -> .)

    constantDeclarationList        shift and go to state 23

state 11

    (3) importList -> IMPORT importedModulesList . ;

    ;               shift and go to state 25


state 12

    (5) importedModulesList -> importedModules . , importedModulesList
    (6) importedModulesList -> importedModules .

    ,               shift and go to state 26
    ;               reduce using rule 6 (importedModulesList -> importedModules .)


state 13

    (7) importedModules -> ID . ASSIGN ID
    (8) importedModules -> ID .

    ASSIGN          shift and go to state 27
    ,               reduce using rule 8 (importedModules -> ID .)
    ;               reduce using rule 8 (importedModules -> ID .)


state 14

    (1) module -> MODULE ID ; importList declarationList statementBlock . END ID .
    (2) module -> MODULE ID ; importList declarationList statementBlock . END ID

    END             shift and go to state 28


state 15

    (41) statementBlock -> BEGIN . beginquad statementList boolMarker
    (43) beginquad -> .

    IF              reduce using rule 43 (beginquad -> .)
    CASE            reduce using rule 43 (beginquad -> .)
    WHILE           reduce using rule 43 (beginquad -> .)
    REPEAT          reduce using rule 43 (beginquad -> .)
    FOR             reduce using rule 43 (beginquad -> .)
    LOOP            reduce using rule 43 (beginquad -> .)
    EXIT            reduce using rule 43 (beginquad -> .)
    READINT         reduce using rule 43 (beginquad -> .)
    READREAL        reduce using rule 43 (beginquad -> .)
    RETURN          reduce using rule 43 (beginquad -> .)
    DEC             reduce using rule 43 (beginquad -> .)
    INC             reduce using rule 43 (beginquad -> .)
    ID              reduce using rule 43 (beginquad -> .)
    ABS             reduce using rule 43 (beginquad -> .)
    SIZE            reduce using rule 43 (beginquad -> .)
    MIN             reduce using rule 43 (beginquad -> .)
    MAX             reduce using rule 43 (beginquad -> .)
    CHR             reduce using rule 43 (beginquad -> .)
    ORD             reduce using rule 43 (beginquad -> .)
    CAP             reduce using rule 43 (beginquad -> .)
    END             reduce using rule 43 (beginquad -> .)

    beginquad                      shift and go to state 29

state 16

    (21) procedureDeclarationList -> forwardDeclaration . ; procedureDeclarationList

    ;               shift and go to state 30


state 17

    (9) declarationList -> identifierDeclarationList procedureDeclarationList .

    BEGIN           reduce using rule 9 (declarationList -> identifierDeclarationList procedureDeclarationList .)
    END             reduce using rule 9 (declarationList -> identifierDeclarationList procedureDeclarationList .)


state 18

    (20) procedureDeclarationList -> procedureDeclaration . ; procedureDeclarationList

    ;               shift and go to state 31


state 19

    (23) procedureDeclaration -> PROCEDURE . receiver ID createTable optionalFormalParameters ; declarationList insertEntry statementBlock END ID popTable
    (39) forwardDeclaration -> PROCEDURE . ^ receiver ID createTable optionalFormalParameters popTable2
    (27) receiver -> . ( optionalVAR ID : ID )
    (28) receiver -> .

    ^               shift and go to state 34
    (               shift and go to state 32
    ID              reduce using rule 28 (receiver -> .)

    receiver                       shift and go to state 33

state 20

    (11) identifierDeclarationList -> VAR variableDeclarationList . identifierDeclarationList
    (10) identifierDeclarationList -> . CONST constantDeclarationList identifierDeclarationList
    (11) identifierDeclarationList -> . VAR variableDeclarationList identifierDeclarationList
    (12) identifierDeclarationList -> .

    CONST           shift and go to state 10
    VAR             shift and go to state 9
    PROCEDURE       reduce using rule 12 (identifierDeclarationList -> .)
    BEGIN           reduce using rule 12 (identifierDeclarationList -> .)
    END             reduce using rule 12 (identifierDeclarationList -> .)

    identifierDeclarationList      shift and go to state 35

state 21

    (15) variableDeclarationList -> identifierList . : type ; clearVariables variableDeclarationList

    :               shift and go to state 36


state 22

    (18) identifierList -> ID .
    (19) identifierList -> ID . , identifierList

    :               reduce using rule 18 (identifierList -> ID .)
    ,               shift and go to state 37


state 23

    (10) identifierDeclarationList -> CONST constantDeclarationList . identifierDeclarationList
    (10) identifierDeclarationList -> . CONST constantDeclarationList identifierDeclarationList
    (11) identifierDeclarationList -> . VAR variableDeclarationList identifierDeclarationList
    (12) identifierDeclarationList -> .

    CONST           shift and go to state 10
    VAR             shift and go to state 9
    PROCEDURE       reduce using rule 12 (identifierDeclarationList -> .)
    BEGIN           reduce using rule 12 (identifierDeclarationList -> .)
    END             reduce using rule 12 (identifierDeclarationList -> .)

    identifierDeclarationList      shift and go to state 38

state 24

    (13) constantDeclarationList -> ID . = expression ; constantDeclarationList

    =               shift and go to state 39


state 25

    (3) importList -> IMPORT importedModulesList ; .

    CONST           reduce using rule 3 (importList -> IMPORT importedModulesList ; .)
    VAR             reduce using rule 3 (importList -> IMPORT importedModulesList ; .)
    BEGIN           reduce using rule 3 (importList -> IMPORT importedModulesList ; .)
    END             reduce using rule 3 (importList -> IMPORT importedModulesList ; .)
    PROCEDURE       reduce using rule 3 (importList -> IMPORT importedModulesList ; .)


state 26

    (5) importedModulesList -> importedModules , . importedModulesList
    (5) importedModulesList -> . importedModules , importedModulesList
    (6) importedModulesList -> . importedModules
    (7) importedModules -> . ID ASSIGN ID
    (8) importedModules -> . ID

    ID              shift and go to state 13

    importedModules                shift and go to state 12
    importedModulesList            shift and go to state 40

state 27

    (7) importedModules -> ID ASSIGN . ID

    ID              shift and go to state 41


state 28

    (1) module -> MODULE ID ; importList declarationList statementBlock END . ID .
    (2) module -> MODULE ID ; importList declarationList statementBlock END . ID

    ID              shift and go to state 42


state 29

    (41) statementBlock -> BEGIN beginquad . statementList boolMarker
    (44) statementList -> . statementList boolMarker statement ;
    (45) statementList -> . statement ;
    (46) statementList -> .
    (47) statement -> . IF expression THEN boolMarker statementList nMarker boolMarker elsifList optionalElse END
    (52) statement -> . CASE expression OF caseList optionalElse END
    (57) statement -> . WHILE boolMarker expression DO boolMarker statementList END
    (58) statement -> . REPEAT boolMarker statementList UNTIL boolMarker expression
    (59) statement -> . FOR ID ASSIGN expression forAssign TO expression toValue optionalBY DO boolMarker statementList boolMarker END
    (64) statement -> . LOOP boolMarker statementList END
    (65) statement -> . EXIT
    (66) statement -> . READINT ( designator )
    (67) statement -> . READREAL ( designator )
    (68) statement -> . RETURN
    (69) statement -> . RETURN expression
    (70) statement -> . designator
    (71) statement -> . designator checkConstant ASSIGN expression
    (73) statement -> . DEC ( designator checkConstant )
    (74) statement -> . DEC ( designator checkConstant , expression )
    (75) statement -> . INC ( designator checkConstant )
    (76) statement -> . INC ( designator checkConstant , expression )
    (93) designator -> . ID suffix
    (94) designator -> . builtIn
    (77) builtIn -> . ABS ( expression )
    (78) builtIn -> . SIZE ( INTEGER )
    (79) builtIn -> . SIZE ( REAL )
    (80) builtIn -> . SIZE ( BOOLEAN )
    (81) builtIn -> . SIZE ( CHAR )
    (82) builtIn -> . MIN ( INTEGER )
    (83) builtIn -> . MIN ( REAL )
    (84) builtIn -> . MIN ( BOOLEAN )
    (85) builtIn -> . MIN ( CHAR )
    (86) builtIn -> . MAX ( INTEGER )
    (87) builtIn -> . MAX ( REAL )
    (88) builtIn -> . MAX ( BOOLEAN )
    (89) builtIn -> . MAX ( CHAR )
    (90) builtIn -> . CHR ( expression )
    (91) builtIn -> . ORD ( expression )
    (92) builtIn -> . CAP ( expression )

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for REPEAT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for LOOP resolved as shift
  ! shift/reduce conflict for EXIT resolved as shift
  ! shift/reduce conflict for READINT resolved as shift
  ! shift/reduce conflict for READREAL resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for DEC resolved as shift
  ! shift/reduce conflict for INC resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for ABS resolved as shift
  ! shift/reduce conflict for SIZE resolved as shift
  ! shift/reduce conflict for MIN resolved as shift
  ! shift/reduce conflict for MAX resolved as shift
  ! shift/reduce conflict for CHR resolved as shift
  ! shift/reduce conflict for ORD resolved as shift
  ! shift/reduce conflict for CAP resolved as shift
    END             reduce using rule 46 (statementList -> .)
    IF              shift and go to state 60
    CASE            shift and go to state 48
    WHILE           shift and go to state 45
    REPEAT          shift and go to state 54
    FOR             shift and go to state 55
    LOOP            shift and go to state 65
    EXIT            shift and go to state 63
    READINT         shift and go to state 56
    READREAL        shift and go to state 46
    RETURN          shift and go to state 43
    DEC             shift and go to state 49
    INC             shift and go to state 66
    ID              shift and go to state 51
    ABS             shift and go to state 59
    SIZE            shift and go to state 53
    MIN             shift and go to state 61
    MAX             shift and go to state 47
    CHR             shift and go to state 62
    ORD             shift and go to state 64
    CAP             shift and go to state 44

  ! IF              [ reduce using rule 46 (statementList -> .) ]
  ! CASE            [ reduce using rule 46 (statementList -> .) ]
  ! WHILE           [ reduce using rule 46 (statementList -> .) ]
  ! REPEAT          [ reduce using rule 46 (statementList -> .) ]
  ! FOR             [ reduce using rule 46 (statementList -> .) ]
  ! LOOP            [ reduce using rule 46 (statementList -> .) ]
  ! EXIT            [ reduce using rule 46 (statementList -> .) ]
  ! READINT         [ reduce using rule 46 (statementList -> .) ]
  ! READREAL        [ reduce using rule 46 (statementList -> .) ]
  ! RETURN          [ reduce using rule 46 (statementList -> .) ]
  ! DEC             [ reduce using rule 46 (statementList -> .) ]
  ! INC             [ reduce using rule 46 (statementList -> .) ]
  ! ID              [ reduce using rule 46 (statementList -> .) ]
  ! ABS             [ reduce using rule 46 (statementList -> .) ]
  ! SIZE            [ reduce using rule 46 (statementList -> .) ]
  ! MIN             [ reduce using rule 46 (statementList -> .) ]
  ! MAX             [ reduce using rule 46 (statementList -> .) ]
  ! CHR             [ reduce using rule 46 (statementList -> .) ]
  ! ORD             [ reduce using rule 46 (statementList -> .) ]
  ! CAP             [ reduce using rule 46 (statementList -> .) ]

    designator                     shift and go to state 57
    statementList                  shift and go to state 50
    builtIn                        shift and go to state 58
    statement                      shift and go to state 52

state 30

    (21) procedureDeclarationList -> forwardDeclaration ; . procedureDeclarationList
    (20) procedureDeclarationList -> . procedureDeclaration ; procedureDeclarationList
    (21) procedureDeclarationList -> . forwardDeclaration ; procedureDeclarationList
    (22) procedureDeclarationList -> .
    (23) procedureDeclaration -> . PROCEDURE receiver ID createTable optionalFormalParameters ; declarationList insertEntry statementBlock END ID popTable
    (39) forwardDeclaration -> . PROCEDURE ^ receiver ID createTable optionalFormalParameters popTable2

    BEGIN           reduce using rule 22 (procedureDeclarationList -> .)
    END             reduce using rule 22 (procedureDeclarationList -> .)
    PROCEDURE       shift and go to state 19

    forwardDeclaration             shift and go to state 16
    procedureDeclarationList       shift and go to state 67
    procedureDeclaration           shift and go to state 18

state 31

    (20) procedureDeclarationList -> procedureDeclaration ; . procedureDeclarationList
    (20) procedureDeclarationList -> . procedureDeclaration ; procedureDeclarationList
    (21) procedureDeclarationList -> . forwardDeclaration ; procedureDeclarationList
    (22) procedureDeclarationList -> .
    (23) procedureDeclaration -> . PROCEDURE receiver ID createTable optionalFormalParameters ; declarationList insertEntry statementBlock END ID popTable
    (39) forwardDeclaration -> . PROCEDURE ^ receiver ID createTable optionalFormalParameters popTable2

    BEGIN           reduce using rule 22 (procedureDeclarationList -> .)
    END             reduce using rule 22 (procedureDeclarationList -> .)
    PROCEDURE       shift and go to state 19

    forwardDeclaration             shift and go to state 16
    procedureDeclarationList       shift and go to state 68
    procedureDeclaration           shift and go to state 18

state 32

    (27) receiver -> ( . optionalVAR ID : ID )
    (29) optionalVAR -> . VAR
    (30) optionalVAR -> .

    VAR             shift and go to state 70
    ID              reduce using rule 30 (optionalVAR -> .)

    optionalVAR                    shift and go to state 69

state 33

    (23) procedureDeclaration -> PROCEDURE receiver . ID createTable optionalFormalParameters ; declarationList insertEntry statementBlock END ID popTable

    ID              shift and go to state 71


state 34

    (39) forwardDeclaration -> PROCEDURE ^ . receiver ID createTable optionalFormalParameters popTable2
    (27) receiver -> . ( optionalVAR ID : ID )
    (28) receiver -> .

    (               shift and go to state 32
    ID              reduce using rule 28 (receiver -> .)

    receiver                       shift and go to state 72

state 35

    (11) identifierDeclarationList -> VAR variableDeclarationList identifierDeclarationList .

    PROCEDURE       reduce using rule 11 (identifierDeclarationList -> VAR variableDeclarationList identifierDeclarationList .)
    BEGIN           reduce using rule 11 (identifierDeclarationList -> VAR variableDeclarationList identifierDeclarationList .)
    END             reduce using rule 11 (identifierDeclarationList -> VAR variableDeclarationList identifierDeclarationList .)


state 36

    (15) variableDeclarationList -> identifierList : . type ; clearVariables variableDeclarationList
    (108) type -> . qualident
    (109) type -> . ARRAY expression OF type
    (110) type -> . POINTER TO ARRAY expression OF type
    (102) qualident -> . ID
    (103) qualident -> . ID . ID
    (104) qualident -> . INTEGER
    (105) qualident -> . CHAR
    (106) qualident -> . REAL
    (107) qualident -> . BOOLEAN

    ARRAY           shift and go to state 80
    POINTER         shift and go to state 75
    ID              shift and go to state 81
    INTEGER         shift and go to state 78
    CHAR            shift and go to state 76
    REAL            shift and go to state 73
    BOOLEAN         shift and go to state 77

    type                           shift and go to state 79
    qualident                      shift and go to state 74

state 37

    (19) identifierList -> ID , . identifierList
    (18) identifierList -> . ID
    (19) identifierList -> . ID , identifierList

    ID              shift and go to state 22

    identifierList                 shift and go to state 82

state 38

    (10) identifierDeclarationList -> CONST constantDeclarationList identifierDeclarationList .

    PROCEDURE       reduce using rule 10 (identifierDeclarationList -> CONST constantDeclarationList identifierDeclarationList .)
    BEGIN           reduce using rule 10 (identifierDeclarationList -> CONST constantDeclarationList identifierDeclarationList .)
    END             reduce using rule 10 (identifierDeclarationList -> CONST constantDeclarationList identifierDeclarationList .)


state 39

    (13) constantDeclarationList -> ID = . expression ; constantDeclarationList
    (113) expression -> . - expression
    (114) expression -> . + expression
    (115) expression -> . factor
    (118) expression -> . expression OR boolMarker expression
    (119) expression -> . expression & boolMarker expression
    (120) expression -> . expression # expression
    (121) expression -> . expression = expression
    (122) expression -> . expression < expression
    (123) expression -> . expression LESSEQUAL expression
    (124) expression -> . expression > expression
    (125) expression -> . expression MOREEQUAL expression
    (126) expression -> . expression + expression
    (127) expression -> . expression - expression
    (128) expression -> . expression * expression
    (129) expression -> . expression / expression
    (130) expression -> . expression DIV expression
    (131) expression -> . expression MOD expression
    (132) factor -> . NIL
    (133) factor -> . designator
    (134) factor -> . INTEGERCONSTANT
    (135) factor -> . CHARACTERCONSTANT
    (136) factor -> . REALCONSTANT
    (137) factor -> . STRINGCONSTANT
    (138) factor -> . BOOLEANCONSTANT
    (139) factor -> . ~ factor
    (140) factor -> . ( expression )
    (93) designator -> . ID suffix
    (94) designator -> . builtIn
    (77) builtIn -> . ABS ( expression )
    (78) builtIn -> . SIZE ( INTEGER )
    (79) builtIn -> . SIZE ( REAL )
    (80) builtIn -> . SIZE ( BOOLEAN )
    (81) builtIn -> . SIZE ( CHAR )
    (82) builtIn -> . MIN ( INTEGER )
    (83) builtIn -> . MIN ( REAL )
    (84) builtIn -> . MIN ( BOOLEAN )
    (85) builtIn -> . MIN ( CHAR )
    (86) builtIn -> . MAX ( INTEGER )
    (87) builtIn -> . MAX ( REAL )
    (88) builtIn -> . MAX ( BOOLEAN )
    (89) builtIn -> . MAX ( CHAR )
    (90) builtIn -> . CHR ( expression )
    (91) builtIn -> . ORD ( expression )
    (92) builtIn -> . CAP ( expression )
